# Jihuang

./: README.md
ISRC/files/: Jihuang_about.md  action.md  config_simple.prototxt  example_simple.prototxt  obs_protocol_new.md  大规模虚拟世界配置_0607改1(1).md  新gym环境搭建.md
ISRC/summary/: Deploy Environment.md  Jihaung Improvement.md  Jihuang Improvement.md  Jihuang.md  Jihuang_Reward_Function.md  Quick Start.md  Reward Design.md  summary-zhuazhu-1.md
JiHuang/: CMakeLists.txt  README.md  batch_test.py
JiHuang/agent/: main.py  main_original.py  main_simple.py  result.txt  test.py  train.py
JiHuang/agent/A2C/: a2c.py  policies.py
JiHuang/agent/DQN/: dqn.py  policies.py
JiHuang/agent/OC/: config.py  oc_utils.py
JiHuang/agent/OC_1/: oc_utils.py
JiHuang/agent/PPO/: policies.py  ppo.py
JiHuang/agent/run/PPO_1/: events.out.tfevents.1623995279.vcis2.22459.0
JiHuang/agent/run/PPO_23/: events.out.tfevents.1625464206.vcis2.18675.0
JiHuang/agent/run/PPO_6/: events.out.tfevents.1623996349.vcis2.22955.0
JiHuang/agent/utils/: args.py  obs_utils.py  trick.py
JiHuang/examples/demo/: action_log
JiHuang/examples/jihuang/: example.prototxt  example_day_l_goal_40.prototxt  example_season_32.prototxt  new_example.prototxt
JiHuang/examples/jihuang_env_config/: config.prototxt  config_day_l_goal_40.prototxt  config_new.prototxt  config_season_32.prototxt
JiHuang/python/client/: transit.py
JiHuang/python/gym_api/: a2c_main.py  dqn_main.py  my_oc_train.py  oc_train.py  plot.py  ppo.py  readme.md  setup.py
JiHuang/python/gym_api/A2C/: a2c.py  policies.py
JiHuang/python/gym_api/DQN/: dqn.py  dqn_policies.py
JiHuang/python/gym_api/Jihuang/: 1  __init__.py  args.py  core.py  display_utils.py  find_pig_algo.py  obs_utils.py  reward.py  utils.py  wrapper.py
JiHuang/python/gym_api/Jihuang/config/: config_simple.prototxt  example_simple.prototxt
JiHuang/python/gym_api/Jihuang/utils/: log.py  reward.py  trick.py  utils.py
JiHuang/python/gym_api/OC/: utils.py
JiHuang/python/gym_api/OC_1/: oc_utils.py
JiHuang/python/gym_api/PPO/: policies.py  ppo.py
JiHuang/python/gym_api/oc/: config.py  oc_train.py
JiHuang/python/jihuang/: _jihuang.cpp
JiHuang/replay/: action_log  config_debug_40.prototxt  display_utils.py  example_debug_40.prototxt  player.py
Jihuang_discrete/: README.md
Jihuang_discrete/python/: CMakeLists.txt
Jihuang_discrete/python/client/: send_No_AI.py
Jihuang_discrete/python/gym_api/: api_test.py  buffers.py  discrete_main.py  distributions.py  main.py  policies.py  ppo.py
Jihuang_discrete/python/gym_api/Jihuang/: args.py  config.py  core.py  find_pig_algo.py  obs_utils.py  reward.py  utils.py
Jihuang_discrete/python/gym_api/Jihuang/config/: config_simple.prototxt  example_simple.prototxt
Jihuang_oc/: README.md  oc_train.py  oc_utils.py  utils.py
